--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -6,7 +6,7 @@
 
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
-LDADD = $(LIBEVENT_GC_SECTIONS) ../libevent.la
+LDADD = $(LIBEVENT_GC_SECTIONS) ../libevent_core.la ../libevent_extra.la
 AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/compat -I$(top_srcdir)/include -I../include
 
 noinst_PROGRAMS =				\
